fixed local command executor on Windows